--- a/motifdjango/motifapp/templates/motifapp/idea_of_motif.html
+++ b/motifdjango/motifapp/templates/motifapp/idea_of_motif.html
@@ -9,7 +9,39 @@
         <p class="lead">Long list of ideas to execute, functions to add, bugs to fix. But here it is, v1.0, please help me testing the idea and the site. Thanks & Enjoy! - Will</p>
         <hr class="my-4">
         <p class="lead">
+            <h4>This idea came from my personal struggle over the last few years:</h4>
+            <ul>
+                <li><h5>I've read too much junk content </h5></li>
+                <p>Click baits, ads, fake news, the content that does nothing but drive the traffic and waste your. The worst part is, there is no way to find out other than read at least half of it.
+                </p>
+                <li><h5>I've missed too much good content </h5></li>
+                <p>Since there is no way to tell if the content is good other than read it. I missed out a lot. I don't trust too much on Facebook, Twitter, Buzzfeed or whatever out there since their algorithm is base on traffic, not quality.</p>
+                <li><h5>I've lost too much good ones </h5></li>
+                <p>For those good pieces I read and loved, I have trouble storing them. I often remember something I read awhile back, with just a few fading keywords or points in mind, unable to trace them back. </p>
+            </ul>
         </p>
+        <p class="lead"><h4>What if...</h4></p>
+        <p>What if there is a tool works with articles like Amazon Review for product or IMDB for movies; What if there is a tool for articles works like cliffs notes where people who've read it told you what it's about in 1/10 of the time. What if there is a tool records you entire reading history, let you write some notes to it then you can easily trace them back later...</p>
+        <p class="lead"><h4>And here is the prototype</h4></p>
+        <ul>
+            <li><h5>Save (Add Article button on top) </h5></li>
+            <p>Paste the url of the article and add. It will grab title, author, body content from the source, filter out distractions and gives you a clear reading format. <b>You can rate it base on 1~5 scale. Leave a summary for yourself for future use, and for others for fast reading. </b>If you want to keep it to yourself, make it private. </p>
+            <li><h5>Personal View (Yours) </h5></li>
+            <p>A list view on everything you saved, rated, and summarized. You can delete them, make them private in this view.</p>
+            <li><h5>Discover View (Home) </h5></li>
+            <p> - A list view on things of the people you follows saved, rated, and summarized (In Beta version, everybody follows everybody, yay!!!). I hope this view can <b>create a different kind of reading experience.</b> With this I can quickly make a decision base on article's rating and estimated time consumption, if I see a article with a cost of 15 min and a 2 star avg rating, I will just read the summary and move on. For those with a 5 star rated by my close friends, there is more chance I will give it a try. </p>
+            <p> - A voting system will help to push the most thoughtful and well constructed summary to the top. </p>
+        </ul>
+        <p class="lead"><h4>To Dream a little bigger </h4></p>
+        <p>We put 2 more layers on top of the content: <b>a score and a summary</b>, they will help filter the content. In a environment where popular sites thrive by specializing tricks and skill to drive the traffic regardless of the quality, Motif will try to do the opposite. Content and author will be rated and judged, traffic will only flow to those content that are both creative and informative. Motif will become a reading platform where the good and bad are easily distinguishable, where you can absorb, understand, memorize content faster and better.</p>
+        <hr class="my-4">
+        <h3 class="display-4">I need your help ԅ(¯㉨¯ԅ)</h3>
+        <p>Like all existing cool apps and sites out there, there was a beginning where it was something small, suspicious, and buggy.</p>
+        <p>This idea expects a portion of users to contribute <b>Two things: Rate and Summarize</b>, which is kind of unnatural. We hardly do that. We shrug off bad content we came across, and forget about the good ones. </p>
+        <p></p>
+
+
+
     </div>
 </div>
 
