--- a/motifdjango/motifapp/templates/motifapp/base.html
+++ b/motifdjango/motifapp/templates/motifapp/base.html
@@ -65,14 +65,20 @@
                     <span class="hidden-sm-down">{{ request.user }}</span>
                 </a>
                 <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdownMenuLink">
-                    <a class="dropdown-item" href="#">Activity(WIP)</a>
-                    <a class="dropdown-item" href="/profile/{{ request.user }}">Profile</a>
+                    <a class="dropdown-item" href="{% url 'motifapp:user_activity' request.user %}">Activity</a>
+                    <a class="dropdown-item" href="{% url 'motifapp:user_profile' request.user %}">Profile</a>
                     <div class="dropdown-divider"></div>
                     <a class="dropdown-item" href="{% url 'motifapp:logout' %}"><i class="fa fa-rocket" aria-hidden="true"></i> Logout</a>
                 </div>
             </li>
         </ul>
-
+        <ul class="nav nav-pills float-right">
+            <li class="{% if current == 'activity' %}active{% endif %} nav-item">
+                <a class="nav-link" href="{% url 'motifapp:user_activity' request.user %}">
+                    <i class="fa fa-inbox fa-lg" aria-hidden="true"></i>
+                </a>
+            </li>
+        </ul>
         <ul class="nav nav-pills float-right">
             <div class="btn-group" style="margin:auto;">
                 <button type="button" class="btn btn-motif-1" data-toggle="modal" data-target="#base-add-url-modal">+ <span class="hidden-sm-down">Article</span></button>
