--- a/motifdjango/motifapp/templates/motifapp/base_article_read.html
+++ b/motifdjango/motifapp/templates/motifapp/base_article_read.html
@@ -66,7 +66,7 @@
                     <button type="button" id="font-plus" class="font-plus btn btn-secondary">A+</button>
                 </div>
 
-                <button type="button" class="btn btn-motif-1 menu-toggle" value="hide">RATE</button>
+                <button type="button" class="btn btn-motif-1 menu-toggle" value="hide"><i class="fa fa-pencil-square" aria-hidden="true"></i></button>
             </span>
         </div>
     </div>
