--- a/motifdjango/motifapp/templates/motifapp/discover.html
+++ b/motifdjango/motifapp/templates/motifapp/discover.html
@@ -6,27 +6,30 @@
 
 {% block body %}
 <div class="container-fluid">
-    <!--<ul class="grid effect-2" id="grid">-->
     <div class="row masonry-container">
         {% for article in following_saved_article %}
-        <div class="col-sm-12 col-md-6 col-lg-4 item" style="padding: 0px 10px 0;">
-            {% if ratings|find_avg_c:article.id is not None%}
+        {% if ratings|find_avg_c:article.id is not None%}
+        <div class="col-xs-6 col-sm-6 col-md-6 col-lg-4 item" style="padding: 0px 10px 0;">
             <div class="card">
                 <a href="{{ article.id }}" class="article-thumb-link">
                 {% if article.lead_image_url %}
-                <img class="card-img-top img-fluid" src="{{ article.lead_image_url }}"
-                     alt="Card image cap">
+                <div class="discover-card-top-image-wrap" id="wrapper">
+                    <img class="card-img-top img-fluid discover-card-top-image" src="{{ article.lead_image_url }}"
+                         alt="Card image cap">
+                </div>
                 {% endif %}
                 <div class="article-thumb-corner-info">
                     {% if ratings|find_avg_c:article.id is not None%}
                     <div class="row">
                         <div class="article-thumb-corner-overall">
-                            <i class="fa fa-lightbulb-o" aria-hidden="true"></i> {{ ratings|find_avg_c:article.id }}<span class="rating-note">/{{ ratings|find_number_of_rating:article.id }}</span>
+                            <i class="fa fa-lightbulb-o" aria-hidden="true"></i> {{ ratings|find_avg_c:article.id }}<span class="rating-note">/5&nbsp&nbsp&nbsp&nbsp<i class="fa fa-user-o" aria-hidden="true"></i>{{ ratings|find_number_of_rating:article.id }}</span>
                         </div>
                     </div>
                     {% endif %}
                 </div>
 
+
+                <!--summary block / list all followings' summary -->
                 <div class="card-block">
                     <h4 class="card-title">{{ article.title }}</h4>
                     <small class="text-muted">{{ article.word_count|divide:200}} mins read |
@@ -36,7 +39,7 @@
                 </a>
                 <div class="list-group list-group-flush">
                     {% for x in article.storage_from_followings %}
-                    {% if x.rating_c is not None %}
+                    {% if x.rating_c is not None or x.summary is not None %}
                     <div class="list-group-item">
                         <div class="card-detail">
                             <div class="row">
@@ -45,7 +48,7 @@
                                          class="summary-portrait rounded-circle">
                                 </div>
                                 <div class="col-6 discover-user-and-date">
-                                    <p><a href="{{ x.user }}">{{ x.user }}</a></p>
+                                    <p><a href="{% url 'motifapp:user_view' x.user %}">{{ x.user }}</a></p>
                                     <p>{{ x.add_date|naturaltime}}</p>
                                 </div>
                                 <div class="col-3 discover-rating">
@@ -57,7 +60,18 @@
                         </div>
                         {% if x.summary is not None %}
                         <div class="discover-summary">
-                            <p>{{ x.summary }}</p>
+                            <div class="upvote-button" style="float:left; margin-right:15px;">
+                                <button type="button" id="upvote-button" class=
+                                {% if user_activity|find_user_summary_vote:x.id %}
+                                "btn btn-sm btn-motif-1"{% else %}
+                                "btn btn-sm btn-secondary"{% endif %}
+                                        value="{{x.id}}" style="padding: 10px 10px">
+                                    <i class="fa fa-caret-up" aria-hidden="true"></i>
+                                    <span class="vote-count">{{ x.upvotes }}</span>
+                                </button>
+                            </div>
+                                <!--id: {{ x.id }} {{ user_activity|find_user_summary_vote:x.id }}-->
+                                <p><span class="user-view-summary">&nbsp sum &nbsp</span>&nbsp{{ x.summary }}</p>
                         </div>
                         {% endif %}
                     </div>
@@ -65,8 +79,8 @@
                     {% endfor %}
                 </div>
             </div>
-            {% endif %}
         </div>
+        {% endif %}
         {% endfor %}
     </div>
 </div>
