motif 1.02 Fix some minor details

--- a/motifdjango/motifapp/templates/motifapp/idea_of_motif.html
+++ b/motifdjango/motifapp/templates/motifapp/idea_of_motif.html
@@ -37,8 +37,8 @@
         <hr class="my-4">
         <h3 class="display-4">I need your help ԅ(¯㉨¯ԅ)</h3>
         <p>Like all existing cool apps and sites out there, there was a beginning where it was something small, suspicious, and buggy.</p>
-        <p>This idea expects a portion of users to contribute <b>Two things: Rate and Summarize</b>, which is kind of unnatural. We hardly do that. We shrug off bad content we came across, and forget about the good ones. </p>
-        <p></p>
+        <p>This idea expects a portion of users to contribute <b>Two things: Rate and Summarize</b>, which is very unnatural. </p>
+        <p>All I'm asking is, if you read something cool online, just put it here, share with us, try give it a score or write a few words about it. <b>I will buy you coffee and wash your car (seriously) if you try. </b></p>
 
     </div>
 </div>
