--- a/motifdjango/motifapp/templates/motifapp/user_view.html
+++ b/motifdjango/motifapp/templates/motifapp/user_view.html
@@ -21,7 +21,7 @@
                         {% if article.storage__summary %}
                             &nbsp
                         {% elif article.lead_image_url %}
-                            <div class="pip free">
+                            <div class="lead-image">
                                 <img class="card-img-top img-fluid" src="{{ article.lead_image_url }}">
                             </div>
                         {% endif %}
