--- a/motifdjango/motifapp/templates/motifapp/base_article_read.html
+++ b/motifdjango/motifapp/templates/motifapp/base_article_read.html
@@ -23,6 +23,18 @@
     <!--<script src="{% static 'el-pagination/js/el-pagination.js' %}"></script>-->
     <script src="{% static 'js/masonry.pkgd.min.js' %}"></script>
 
+    <!--google analytics-->
+    <script>
+        (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+                (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+            m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+        })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+
+        ga('create', 'UA-96762180-1', 'auto');
+        ga('send', 'pageview');
+        ga('set', 'userId', {{ request.user }}); // Set the user ID using signed-in user_id.
+    </script>
+
 
     <!-- include summernote css/js-->
     <link href="http://cdnjs.cloudflare.com/ajax/libs/summernote/0.8.2/summernote.css" rel="stylesheet">
