motif 1.03 backup update

--- a/motifdjango/motifapp/templates/motifapp/zzz_testing.html
+++ b/motifdjango/motifapp/templates/motifapp/zzz_testing.html
@@ -4,7 +4,9 @@
 
 {% block body %}
 <div class="container">
-    {{ variable }}
+    {% for row in variable %}
+    <p>{{ row.id }} / {{ row.title }} / {{ row.storage__summary }}</p>
+    {% endfor %}
     <div class="summary-editable">
         <div id="summernote"></div>
     </div>
