--- a/motifdjango/motifapp/templates/motifapp/user_view.html
+++ b/motifdjango/motifapp/templates/motifapp/user_view.html
@@ -32,7 +32,7 @@
                             <div class="row">
                                 <div class="article-thumb-corner-user">
                                     <i class="fa fa-lightbulb-o" aria-hidden="true"></i>
-                                    {{article.storage__rating_c }}<span class="rating-note">/you</span>
+                                    {{article.storage__rating_c }}<span class="rating-note">/5 you</span>
                                 </div>
                                 <div class="article-thumb-corner-overall">
                                     <i class="fa fa-lightbulb-o" aria-hidden="true"></i> {{ ratings|find_avg_c:article.id }}<span class="rating-note">/5&nbsp&nbsp&nbsp&nbsp<i class="fa fa-user-o" aria-hidden="true"></i>{{ ratings|find_number_of_rating:article.id }}</span>
